2004-11-27  Carlos Garnacho Parro  <carlosg@gnome.org>

	* ifaces-list.c: fixed context menu for ifaces, now it
	enables/disables correctly

2004-11-27  Carlos Garnacho Parro  <carlosg@gnome.org>

	* callbacks.[ch], connection.[ch], main.c: handled dialog changing and
	fields checking.
	* callbacks.c: fixed a compile warning
	* connection.c: fixed a function indent

2004-11-26  Carlos Garnacho Parro  <carlosg@gnome.org>

	* callbacks.[ch] (callbacks_check_hostname_hook): added
	* main.c: added apply hook for checking when the hostname is changed

2004-11-26  Carlos Garnacho Parro  <carlosg@gnome.org>

	* callbacks.[ch] (on_detect_modem_clicked): added
	(enable_disable_iface): warn when the iface could not be enabled
	(on_host_aliases_delete_clicked): added gst_dialog_modify()
	* connection.[ch], main.c: added some modem detection stuff
	* hosts.c (host_aliases_run_dialog): added a gst_dialog_modify()

2004-11-24  Carlos Garnacho Parro  <carlosg@gnome.org>

	* connection.[ch] (modem_dialog_prepare), (modem_dialog_save): added.
	Handled modem GUI.
	* network-iface-modem.[ch]: added missing properties

2004-11-23  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network-iface-modem.[ch]: added files to handle PPP devices
	* Makefile.am: ditto
	* connection.c, gst-network-tool.h, ifaces-list.c: began to handle
	PPP devices
	* callbacks.c: somewhat prettify code

2004-11-22  Carlos Garnacho Parro  <carlosg@gnome.org>

	* ifaces-list.[ch] (gateways_combo_get_selected): added
	* transfer.c: save gateway settings

2004-11-22  Carlos Garnacho Parro  <carlosg@gnome.org>

	* hosts.[ch]: abstracted a bit more, made it able to save the config
	* transfer.[ch]: somewhat improved

2004-11-22  Carlos Garnacho Parro  <carlosg@gnome.org>

	* hosts.[ch]: added for handling /etc/hosts editing
	* Makefile.am: ditto
	* callbacks.[ch], gst-network-tool.[ch], main.c, transfer.c: handled
	hosts aliases editing

2004-11-20  Carlos Garnacho Parro  <carlosg@gnome.org>
