@@ -1,3 +1,9 @@
+2004-11-29  Carlos Garnacho Parro  <carlosg@gnome.org>
+
+	* address-list.c, hosts.c: added popup menus
+	* callbacks.[ch], ifaces-list.[ch]: generalized a bit the popup menu
+	stuff.
+
 2004-11-27  Carlos Garnacho Parro  <carlosg@gnome.org>
 
 	* ifaces-list.c: fixed context menu for ifaces, now it
